kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/num/pos.k
use super.*;

pub type Pos {
    one: Pos,
    extend(left: Pos, right: Bit): Pos,
}

pub let eq = fun eq(a: Pos, b: Pos): Bool {
    true
};
