kanc/src/tests/sample_code/should_fail/single_file/type_check/type_mismatch/adt.k
type U1 {
    u1: U1,
}

type U2 {
    u2: U2,
}

let foo = fun foo_(u: U1): U1 {
    U2.u2
};
